<resources>

    <string name="app_name">SlideShows</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_image_view">ImageViewActivity</string>
    <string name="hostname">Host Name</string>
    <string name="domain">Domain (If available)</string>
    <string name="userid">User ID</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="network_path">Network Path</string>
    <string name="title_activity_file_browser">File Browser</string>
    <string name="Name">name</string>
    <string name="name">Name</string>

</resources>